clusters/calcifer-cloud/apps/web/edge-proxies/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-home
  namespace: web
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
