clusters/calcifer-cloud/apps/web/edge-proxies/home-assistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: web
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`home.calcifer.tech`)
      services:
        - name: home-assistant-home
          port: 443
          scheme: https
          serversTransport: home-assistant-home
          passHostHeader: true
  tls:
    secretName: home-assistant-cloud-tls
